# helical

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .pybiomart.sqlite  .readthedocs.yaml  9RTAZwsSINnJm7vF0huqnO30bzzpM3AdxJ5pZjRx8tI.html  CITATION.bib  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  _config.yml  _toc.yml  conf.py  entrypoint.sh  geneformer_config.json  helical-package-test.py  helical.py  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_cuda.txt  run_all.py  run_app.py  run_geneformer.py  run_scgpt.py  run_uce.py  scgpt_config.json  setup.py  singularity.def  smoketest.py  smoketest2.py  uce_config.json  uce_config.py
.github/: dependabot.yml
.github/workflows/: coverage.yml  get_embeddings.yml  main.yml  notebooks.yml  release.yml
0.1/: 404.html  index.html  objects.inv
0.1/configs/geneformer_config/: index.html
0.1/configs/hyenadna_config/: index.html
0.1/search/: search_index.json
0.1/stylesheets/: extra.css
1.0/: 404.html  index.html  sitemap.xml
1.0/search/: search_index.json
_static/: my_theme.css
app/: app.py  run.py
app/routers/: uce.py
ci/: download_all.py  get_all_data_embeddings.py  run_all.py  run_uce.py
ci/tests/: conftest.py  test_sampler.py  test_scbank.py  test_scformer.py  test_tokenizer.py
django/backend/: settings.py  urls.py
django/swagger/: apps.py  urls.py  views.py
docs/: Geneformer.rst  HelixR.rst  Helix_mRNA.rst  README.md  UCE.rst  _config.yml  _toc.yml  api.rst  hyena_dna.rst  index.md  intro.md  intro.rst  requirements.txt  scGPT.rst
docs/_autosummary/: helical.constants.enums.rst  helical.constants.rst  helical.models.geneformer.geneformer_tokenizer.rst  helical.models.geneformer.geneformer_utils.rst  helical.models.geneformer.model.rst  helical.models.geneformer.rst  helical.models.helical.rst  helical.models.rst  helical.models.scgpt.rst  helical.models.uce.gene_embeddings.rst  helical.models.uce.model.rst  helical.models.uce.rst  helical.models.uce.uce_collator.rst  helical.models.uce.uce_dataset.rst  helical.models.uce.uce_model.rst  helical.models.uce.uce_utils.rst  helical.preprocessor.rst  helical.rst  helical.services.downloader.rst  helical.services.logger.rst  helical.services.rst  helical.version.rst
docs/benchmarking/: description.md
docs/configs/: c2s_config.md  caduceus_config.md  evo_2_config.md  geneformer_config.md  helix_mrna_config.md  hyenadna_config.md  mamba2_mrna_config.md  scgpt_config.md  state_config.md  tahoe_config.md  transcriptformer.md  uce_config.md
docs/fine_tuning_models/: caduceus_fine_tune.md  geneformer_fine_tune.md  helix_mrna_fine_tune.md  hyenadna_fine_tune.md  mamba2_mrna_fine_tune.md  scgpt_fine_tune.md  state_fine_tune.md  uce_fine_tune.md
docs/model_cards/: c2s.md  caduceus.md  evo_2.md  geneformer.md  helix_mrna.md  helixr.md  hyena_dna.md  hyenadna.md  mamba2_mrna.md  scgpt.md  state.md  tahoe.md  transcriptformer.md  uce.md
docs/models/: base_models.md  c2s.md  caduceus.md  evo_2.md  fine_tuning_heads.md  geneformer.md  helix_mrna.md  hyenadna.md  mamba2_mrna.md  nicheformer.md  scgpt.md  state.md  tahoe.md  transcriptformer.md  uce.md
docs/notebooks/: Cell-Gene-Cls-embedding-generation.ipynb  Cell-Type-Annotation.ipynb  Cell-Type-Classification-Fine-Tuning.ipynb  Cell2Sen-Tutorial.ipynb  Evo-2.ipynb  Geneformer-Series-Comparison.ipynb  Geneformer-vs-TranscriptFormer.ipynb  Geneformer-vs-UCE.ipynb  Genegpt-sample-run.ipynb  Helix-mRNA.ipynb  Hyena-DNA-Inference.ipynb  HyenaDNA-Fine-Tuning.ipynb  Quick-Start-Tutorial.ipynb  STATE-tutorial.ipynb  Tahoe-x1-Tutorial.ipynb
docs/stylesheets/: extra.css
examples/: Geneformer-vs-UCE.ipynb  Hyena-DNA-Inference.ipynb  Quick-Start Tutorial.ipynb  Quick-Start_Tutorial.ipynb  README.md  benchmark.py  config.yaml  geneformer_config.json  hyena_dna_inference.ipynb  reference_mapping.ipynb  reference_mapping_rick.ipynb  requirements.txt  run_all.py  run_benchmark.py  run_geneformer.py  run_hyena_dna.py  run_scgpt.py  run_uce.py  scgpt_config.json  setup.py  uce_config.json  uce_custom_configs_example.ipynb  uce_example.ipynb
examples/fine_tune_models/: fine_tune_UCE.py  fine_tune_caduceus.py  fine_tune_geneformer.py  fine_tune_helix_mrna.py  fine_tune_hyena_dna.py  fine_tune_mamba2_mrna.py  fine_tune_scgpt.py  fine_tune_state.py
examples/notebooks/: Cell-Gene-Cls-embedding-generation.ipynb  Cell-Type-Annotation.ipynb  Cell-Type-Classification-Fine-Tuning.ipynb  Cell2Sen-Tutorial.ipynb  Celltypist.ipynb  Evo-2.ipynb  Geneformer-Series-Comparison.ipynb  Geneformer-vs-TranscriptFormer.ipynb  Geneformer-vs-UCE.ipynb  Genegpt-sample-run.ipynb  Helical_Technical_Interview.ipynb  Helix-mRNA.ipynb  Hyena-DNA-Fine_Tuning.ipynb  Hyena-DNA-Inference.ipynb  HyenaDNA-Fine-Tuning.ipynb  Quick-Start-Tutorial.ipynb  Quick-Start_Tutorial.ipynb  STATE-tutorial.ipynb  Tahoe-x1-Tutorial.ipynb  test.csv  test.ipynb
examples/probing_tutorial_helpers/: README.md  get_all_data_embeddings.py  predict_all.py
examples/run_models/: change_files.py  run_c2s.py  run_caduceus.py  run_evo2.py  run_geneformer.py  run_geneformer_attention.py  run_helix_mrna copy.py  run_helix_mrna.py  run_hyena_dna.py  run_mamba2_mrna.py  run_nicheformer.py  run_sccaf.py  run_scgpt.py  run_scgpt_geneformer_timing.py  run_state.py  run_tahoe.py  run_transcriptformer.py  run_transcriptformer_metazoa.py  run_uce.py
helical/: __init__.py  benchmark.py  downloader.py  preprocessing.py  preprocessor.py
helical/analysis/: analyser.py
helical/benchmark/: README.md  base_task_model.py  batch_effect_correction.json  benchmark.py  cell_type_annotation.json  notion.py
helical/classification/: classifier.py  neural_network.py
helical/constants/: enums.py  hash_values.py  paths.py
helical/db/: tiledb.py
helical/models/: __init__.py  base_models.py  helical.py  sc_gpt.py  uce.py
helical/services/: converter.py  downloader.py  logger.py  mapping.py
helical/utils/: __init__.py  attn_backend.py  converter.py  dataset_to_anndata.py  downloader.py  logger.py  mapping.py  transformer_encoder.py
(+398 files in other folders)
