[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helical"
version = "1.4.14"
authors = [
  { name="Helical Team", email="support@helical-ai.com" },
]
description = "Helical Python SDK"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

license = {file = "LICENSE"}

dependencies = [
    'requests>=2.32.3',
    'pandas==2.2.2',
    'anndata>=0.11',
    'numpy>=2.1.3,<2.3',  # scipy 1.13.1 requires numpy<2.3
    'scikit-learn>=1.5.0',
    'scipy==1.13.1',
    'gitpython==3.1.44',
    'torch==2.7.0',
    'accelerate==1.4.0',
    'transformers>=4.49.0,<=4.51.3',
    'loompy==3.0.7',
    'scib==1.1.5',
    'scikit-misc>=0.5.2',
    'einops==0.8.1',
    'omegaconf==2.3.0',
    'hydra-core==1.3.2',
    'louvain==0.8.2',
    'pybiomart',
    'datasets==3.6.0',
    'sentencepiece>=0.2.0',
    'bitsandbytes>=0.48.2',
    'protobuf>=3.20.0',
]


[project.optional-dependencies]
mamba-ssm = [
    'mamba-ssm==2.2.5',
    'causal-conv1d==1.5.1',
]

evo-2 = [
    'biopython==1.85',
    'transformer-engine[pytorch]==1.13.0',
]

tahoe = [
    'flash_attn==2.7.4.post1',
    'llm-foundry>=0.17.1',
    'torchvision==0.22.0',
]

[tool.hatch.metadata]
allow-direct-references = true # Allows installing package from git

[project.urls]
Homepage = "https://github.com/helicalAI/helical"
Issues = "https://github.com/helicalAI/helical/issues"
Documentation = "https://helical.readthedocs.io/"
Repository = "https://github.com/helicalAI/helical"
